--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -7,7 +7,9 @@ add_library(eosio
             eosiolib.cpp 
             ${HEADERS})
 
-target_include_directories(eosio PUBLIC "${STANDARD_INCLUDES}")
+target_include_directories(eosio PUBLIC 
+                                 "$<BUILD_INTERFACE:${STANDARD_INCLUDES}>"
+                                 $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
 target_link_libraries( eosio c c++ )
 
@@ -16,3 +18,4 @@ install(TARGETS eosio EXPORT EosioLib
       ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(EXPORT EosioLib DESTINATION ${CMAKE_INSTALL_PREFIX}/modules)
