--- a/libraries/libc/CMakeLists.txt
+++ b/libraries/libc/CMakeLists.txt
@@ -45,17 +45,16 @@ add_library(c
             ${HEADERS})
 
 add_dependencies(c EosioClang)
-target_include_directories(c
-                           PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/musl/include"
-                                  "${CMAKE_CURRENT_SOURCE_DIR}/musl/src/internal"
-                                  "${CMAKE_CURRENT_SOURCE_DIR}/musl/src/crypt"
-                                  "${CMAKE_CURRENT_SOURCE_DIR}/musl/arch/eos/"
-                                  "${CMAKE_CURRENT_SOURCE_DIR}/../")
+target_include_directories(c 
+                           PUBLIC 
+                           "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/musl/include;${CMAKE_CURRENT_SOURCE_DIR}/musl/src/internal;${CMAKE_CURRENT_SOURCE_DIR}/musl/src/crypt;${CMAKE_CURRENT_SOURCE_DIR}/musl/arch/eos;${CMAKE_CURRENT_SOURCE_DIR}/../>"
+                           $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
-install(TARGETS c EXPORT EosLibC
+install(TARGETS c EXPORT EosioLibC
       LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
       ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/musl/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/musl/src/internal/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/musl/arch/eos/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(EXPORT EosioLibC DESTINATION ${CMAKE_INSTALL_PREFIX}/modules)
