Added strip bss tool and finished packaging libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(eosio_wasm_sdk)
+project(eosio_wasm_sdk VERSION 0.0.0)
 
 set(INSTALL_BASE ${CMAKE_INSTALL_PREFIX})
 if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
@@ -21,9 +21,11 @@ else(NOT ${NO_WASM_COMPILER} STREQUAL "")
    include(ClangExternalProject.txt)
 endif()
 
+add_subdirectory(external)
+
 set(WASM_SDK_BUILD true)
 
-configure_file(${CMAKE_SOURCE_DIR}/eosio.imports.in ${CMAKE_INSTALL_PREFIX}/eosio.imports)
+configure_file(${CMAKE_SOURCE_DIR}/eosio.imports.in ${CMAKE_INSTALL_BINDIR}/eosio.imports)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/modules")
 include(EosioWasmToolchain)
@@ -33,7 +35,7 @@ add_subdirectory(libraries)
 add_subdirectory(examples)
 
 # install the cmake modules
-install(DIRECTORY modules DESTINATION "${CMAKE_INSTALL_PREFIX}")
+install(DIRECTORY modules DESTINATION "${CMAKE_INSTALL_BINDIR}")
 
 # install cppeos wrapper
 configure_file(${CMAKE_SOURCE_DIR}/cppeos.in ${CMAKE_BINARY_DIR}/cppeos)
@@ -43,5 +45,24 @@ install(FILES ${CMAKE_BINARY_DIR}/cppeos DESTINATION ${INSTALL_BASE}/bin PERMISS
 configure_file(${CMAKE_SOURCE_DIR}/eosio.lld.in ${CMAKE_BINARY_DIR}/eosio.lld)
 install(FILES ${CMAKE_BINARY_DIR}/eosio.lld DESTINATION ${INSTALL_BASE}/bin PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
+# install pfr
+install(DIRECTORY libraries/pfr/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
 # install examples
-install(DIRECTORY examples DESTINATION "${CMAKE_INSTALL_PREFIX}")
+install(DIRECTORY examples DESTINATION "${CMAKE_INSTALL_BINDIR}")
+
+install(EXPORT EosioLib DESTINATION ${CMAKE_INSTALL_BINDIR}/modules)
+
+set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(EosioLibConfigVersion.cmake 
+   COMPATIBILITY SameMajorVersion)
+
+configure_package_config_file(${CMAKE_SOURCE_DIR}/modules/EosioLibConfig.cmake.in EosioLibConfig.cmake
+   INSTALL_DESTINATION "${CMAKE_INSTALL_BINDIR}/modules/"
+   PATH_VARS INCLUDE_INSTALL_DIR)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/EosioLibConfigVersion.cmake
+   DESTINATION ${CMAKE_INSTALL_BINDIR}/modules)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/EosioLibConfig.cmake
+   DESTINATION ${CMAKE_INSTALL_BINDIR}/modules)
