--- a/cppeos.in
+++ b/cppeos.in
@@ -1,9 +1,9 @@
 #! /bin/bash
 
 CFL_AA="-use-cfl-aa-in-codegen=both"
-STD_FLAGS=" -I${Boost_INCLUDE_DIRS} -mllvm $CFL_AA --target=wasm32 -nostdlib -ffreestanding -fno-builtin -Xclang -load -Xclang ${EOSIO_APPLY_LIB} "
+STD_FLAGS=" -I${Boost_INCLUDE_DIRS} -mllvm $CFL_AA --target=wasm32 -nostdlib -ffreestanding -fno-builtin -Xclang -load -Xclang ${EOSIO_APPLY_LIB} -DBOOST_DISABLE_ASSERTS -DBOOST_EXCEPTION_DISABLE "
 CPP_FLAGS=" -std=c++14 -fno-rtti -fno-exceptions "
-EXE_LD_FLAGS=" -Wl,--allow-undefined-file=${CMAKE_INSTALL_PREFIX}/eosio.imports,-e,apply,--lto-O3,--gc-sections,--merge-data-segments,--strip-all,-stack-first,-zstack-size=8192,-mllvm,$CFL_AA -lc++ -lc -leosio "
+EXE_LD_FLAGS=" -Wl,--allow-undefined-file=${CMAKE_INSTALL_PREFIX}/eosiosdk/eosio.imports,-e,apply,--lto-O3,--gc-sections,--merge-data-segments,--strip-all,-stack-first,-zstack-size=8192,-mllvm,$CFL_AA -lc++ -lc -leosio "
 
 while getopts ":cS" opt; do
    case $opt in
@@ -16,4 +16,4 @@ while getopts ":cS" opt; do
    esac
 done
 
-${CMAKE_INSTALL_PREFIX}/eosiowasm/bin/clang++ $STD_FLAGS $CPP_FLAGS $@ --sysroot ${CMAKE_INSTALL_PREFIX} $EXE_LD_FLAGS
+${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/clang++ $STD_FLAGS $CPP_FLAGS $@ -I${CMAKE_INSTALL_PREFIX}/eosiosdk/include/eosiolib -I${CMAKE_INSTALL_PREFIX}/eosiosdk/include/libcxx -I${CMAKE_INSTALL_PREFIX}/eosiosdk/libc --sysroot ${CMAKE_INSTALL_PREFIX}/eosiosdk $EXE_LD_FLAGS
