--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,12 @@ install(FILES ${CMAKE_BINARY_DIR}/cppeos DESTINATION ${CMAKE_INSTALL_BINDIR} PER
 configure_file(${CMAKE_SOURCE_DIR}/eosio.lld.in ${CMAKE_BINARY_DIR}/eosio.lld)
 install(FILES ${CMAKE_BINARY_DIR}/eosio.lld DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
+# install ranlib ar objdump and readelf
+install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-ranlib DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ranlib PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-ar DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ar PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-objdump DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.objdump PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-readelf DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.readelf PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+
 # install pfr
 install(DIRECTORY libraries/pfr/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/eosiosdk/include/)
 
