Structural changes, now using our eosio.cc eosio.cpp and eosio.ld to compile in CMake, added back some missing files from libc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ else(NOT ${NO_WASM_COMPILER} STREQUAL "")
    set(no_wasm_comp "false")
    include(ClangExternalProject.txt)
 endif()
+#include(ToolingExternalProject.txt)
 
 add_subdirectory(external)
 
@@ -29,19 +30,14 @@ add_subdirectory(libraries)
 
 #add_subdirectory(examples)
 
-# install cppeos wrapper
-configure_file(${CMAKE_SOURCE_DIR}/cppeos.in ${CMAKE_BINARY_DIR}/cppeos)
-install(FILES ${CMAKE_BINARY_DIR}/cppeos DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-# install eosio.lld wrapper
-configure_file(${CMAKE_SOURCE_DIR}/eosio.lld.in ${CMAKE_BINARY_DIR}/eosio.lld)
-install(FILES ${CMAKE_BINARY_DIR}/eosio.lld DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-# install ranlib ar objdump and readelf
+# install cpp ld ranlib ar objdump and readelf
 install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-ranlib DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ranlib PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-ar DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ar PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-objdump DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.objdump PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-readelf DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.readelf PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/eosio.cpp DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.cpp PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/eosio.ld DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ld PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
 # install pfr
 install(DIRECTORY libraries/pfr/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/eosiosdk/include/)
