--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 add_subdirectory(external)
 
 set(WASM_SDK_BUILD true)
+set(SDK_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/eosio.wasmsdk)
 
 configure_file(${CMAKE_SOURCE_DIR}/eosio.imports.in ${CMAKE_BINARY_DIR}/eosio.imports)
 
@@ -28,26 +29,79 @@ include(EosioWasmToolchain)
 
 add_subdirectory(libraries)
 
-#add_subdirectory(examples)
+if ( ${no_wasm_comp} STREQUAL "false" )
+   # install clang and llvm
+   set(CLANG_BIN_DIR ${CMAKE_BINARY_DIR}/EosioClang-prefix/src/EosioClang-build/bin)
+   install(FILES ${CLANG_BIN_DIR}/llvm-ranlib 
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/llvm-ar 
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/llvm-nm 
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/llvm-objdump 
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/llvm-readelf 
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/opt
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/llc
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/lld
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/llvm-strip
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/clang-7 
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/wasm-ld
+      DESTINATION ${SDK_INSTALL_PREFIX}/bin
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
+   # install cpp ld ranlib ar objdump and readelf
+   install(FILES ${SDK_INSTALL_PREFIX}/bin/llvm-ranlib 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ranlib 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${SDK_INSTALL_PREFIX}/bin/llvm-ar 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ar 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${SDK_INSTALL_PREFIX}/bin/llvm-objdump 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.objdump 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${SDK_INSTALL_PREFIX}/bin/llvm-readelf 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.readelf 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-# install cpp ld ranlib ar objdump and readelf
-install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-ranlib DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ranlib PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-ar DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ar PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-objdump DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.objdump PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/llvm-readelf DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.readelf PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/eosio.cpp DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.cpp PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-install(FILES ${CMAKE_INSTALL_PREFIX}/eosiosdk/eosiollvm/bin/eosio.ld DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio.ld PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-# install pfr
-install(DIRECTORY libraries/pfr/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/eosiosdk/include/)
+   install(FILES ${CLANG_BIN_DIR}/eosio.cpp 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/eosio.ld 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} 
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/clang-7 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME clang
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CLANG_BIN_DIR}/clang-7 
+      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME clang
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+   install(FILES ${CMAKE_BINARY_DIR}/../lib/LLVMEosioApply${CMAKE_SHARED_LIBRARY_SUFFIX}
+      DESTINATION ${CMAKE_INSTALL_BINDIR})
+endif()
 
 # install examples
-install(DIRECTORY examples DESTINATION "${CMAKE_INSTALL_PREFIX}/eosiosdk")
+install(DIRECTORY examples DESTINATION "${SDK_INSTALL_PREFIX}")
 
 install(EXPORT EosioLib DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake)
 
-set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/eosiosdk/include)
+set(INCLUDE_INSTALL_DIR ${SDK_INSTALL_PREFIX}/include)
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(EosioLibConfigVersion.cmake 
    COMPATIBILITY SameMajorVersion)
@@ -61,4 +115,4 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/EosioLibConfigVersion.cmake
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/EosioLibConfig.cmake
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake)
 install(FILES ${CMAKE_SOURCE_DIR}/modules/EosioWasmToolchain.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake)
-install(FILES ${CMAKE_BINARY_DIR}/eosio.imports DESTINATION ${CMAKE_INSTALL_PREFIX}/eosiosdk/)
+install(FILES ${CMAKE_BINARY_DIR}/eosio.imports DESTINATION ${SDK_INSTALL_PREFIX})
