--- a/examples/exchange/CMakeLists.txt
+++ b/examples/exchange/CMakeLists.txt
@@ -13,5 +13,4 @@ list(APPEND CMAKE_MODULE_PATH ${WASM_ROOT}/lib/cmake)
 include(EosioWasmToolchain)
 
 add_executable(exchange exchange.cpp )
-target_include_directories( exchange PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../ ${STANDARD_INCLUDES})
-target_link_libraries( exchange ${STANDARD_LIBS} )
+target_include_directories( exchange PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../ )
