--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -1,6 +1,8 @@
 file(GLOB HEADERS "*.hpp"
                   "*.h")
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/core_symbol.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/core_symbol.hpp)
+
 add_library(eosio 
             eosiolib.cpp 
             ${HEADERS})
