Fixes for DESTDIR
fixed a few things that did not support the `make install DESTDIR=` idiom.

resolves EOSIO/eosio.wasmsdk#6

--- a/external/wabt/CMakeLists.txt
+++ b/external/wabt/CMakeLists.txt
@@ -289,8 +289,8 @@ if (NOT EMSCRIPTEN)
     set(WABT_EXECUTABLES ${WABT_EXECUTABLES} PARENT_SCOPE)
 
     add_custom_target(${name}-copy-to-bin ALL
-       COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_INSTALL_BINDIR}
-       COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${name}> ${CMAKE_INSTALL_BINDIR}
+       COMMAND ${CMAKE_COMMAND} -E make_directory \$ENV{DESTDIR}${CMAKE_INSTALL_BINDIR}
+       COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${name}> \$ENV{DESTDIR}${CMAKE_INSTALL_BINDIR}
       DEPENDS ${name}
     )
   endfunction()
@@ -394,7 +394,7 @@ if (NOT EMSCRIPTEN)
   # install
   #install(TARGETS ${WABT_EXECUTABLES} DESTINATION bin)
   install(TARGETS eosio-pp DESTINATION ${SDK_INSTALL_PREFIX}/bin)
-  install(FILES ${SDK_INSTALL_PREFIX}/bin/eosio-pp 
+  install(FILES ${WABT_BINARY_DIR}/bin/eosio-pp 
      DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio-pp
      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
