--- a/external/wabt/CMakeLists.txt
+++ b/external/wabt/CMakeLists.txt
@@ -393,10 +393,9 @@ if (NOT EMSCRIPTEN)
 
   # install
   #install(TARGETS ${WABT_EXECUTABLES} DESTINATION bin)
-  install(TARGETS eosio-pp DESTINATION ${SDK_INSTALL_PREFIX}/bin)
-  install(FILES ${SDK_INSTALL_PREFIX}/bin/eosio-pp 
-     DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME eosio-pp
-     PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+  install(TARGETS wat2wasm DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})
+  install(TARGETS wasm2wat DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})
+  install(TARGETS eosio-pp DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})
 
 else ()
   # emscripten stuff
