--- a/libraries/boost/CMakeLists.txt
+++ b/libraries/boost/CMakeLists.txt
@@ -1,1 +1,1 @@
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION ${SDK_INSTALL_PREFIX}/include/../)
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/../)
