--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB HEADERS "*.hpp"
                   "*.h")
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/core_symbol.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/core_symbol.hpp)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/core_symbol.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/core_symbol.hpp)
 
 add_library(eosio 
             eosiolib.cpp 
@@ -9,12 +9,12 @@ add_library(eosio
 
 target_include_directories(eosio PUBLIC 
                                  "$<BUILD_INTERFACE:${STANDARD_INCLUDES}>"
-                                 $<INSTALL_INTERFACE:${SDK_INSTALL_PREFIX}/include/>)
+                                 $<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>)
 
 target_link_libraries( eosio c c++ )
 
 install(TARGETS eosio EXPORT EosioLib
-   LIBRARY DESTINATION ${SDK_INSTALL_PREFIX}/lib/
-   ARCHIVE DESTINATION ${SDK_INSTALL_PREFIX}/lib/)
+   LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+   ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${SDK_INSTALL_PREFIX}/include)
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR})
