--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(CMAKE_C_FLAGS " ${CMAKE_C_FLAGS} -O3 -Wall ")
+set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 -Wall ")
+
 add_subdirectory(libc)
 add_subdirectory(libc++)
 add_subdirectory(eosiolib)
