--- a/modules/EosioWasmToolchainBuild.cmake.in
+++ b/modules/EosioWasmToolchainBuild.cmake.in
@@ -3,18 +3,18 @@ set(CMAKE_SYSTEM_NAME WebAssembly)
 
 set(EOSIO_WASMSDK_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
 
-set(CLANG_DIR ${CMAKE_BINARY_DIR}/EosioClang-prefix/src/EosioClang-build)
+set(CLANG_DIR @CMAKE_BINARY_DIR@/EosioClang-prefix/src/EosioClang-build)
 
 set(CMAKE_C_COMPILER "${CLANG_DIR}/bin/eosio-cc")
 set(CMAKE_CXX_COMPILER "${CLANG_DIR}/bin/eosio-cpp")
 
-set(CMAKE_C_FLAGS " -O3 -I@Boost_INCLUDE_DIRS@ ")
-set(CMAKE_CXX_FLAGS " -O3 -I@Boost_INCLUDE_DIRS@ ")
+set(CMAKE_C_FLAGS " -O3 -I@CMAKE_SOURCE_DIR@/libraries/boost/include -I@CMAKE_SOURCE_DIR@/libraries/libc++/libcxx/include -I@CMAKE_SOURCE_DIR@/libraries/libc/musl/include -I@CMAKE_SOURCE_DIR@/libraries -I@BOOST_ROOT@/include")
+set(CMAKE_CXX_FLAGS " -O3 -I@CMAKE_SOURCE_DIR@/libraries/boost/include -I@CMAKE_SOURCE_DIR@/libraries/libc++/libcxx/include -I@CMAKE_SOURCE_DIR@/libraries/libc/musl/include -I@CMAKE_SOURCE_DIR@/libraries -I@BOOST_ROOT@/include --std=c++14 ")
 
-set(WASM_LINKER "${CLANG_DIR}/bin/eosio-ld")
+set(WASM_LINKER "${CLANG_DIR}/bin/eosio-ld ")
 
-set(CMAKE_C_LINK_EXECUTABLE "${WASM_LINKER} <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
-set(CMAKE_CXX_LINK_EXECUTABLE "${WASM_LINKER} <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
+set(CMAKE_C_LINK_EXECUTABLE "${WASM_LINKER} -L@CMAKE_BINARY_DIR@/libraries/eosiolib -L@CMAKE_BINARY_DIR@/libraries/libc -L@CMAKE_BINARY_DIR@/libraries/libc++ -eosio-imports=@CMAKE_BINARY_DIR@/eosio.imports -eosio-pp-dir=@CMAKE_BINARY_DIR@/external/wabt <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES> -leosio -lc++ -lc ")
+set(CMAKE_CXX_LINK_EXECUTABLE "${WASM_LINKER} -L@CMAKE_BINARY_DIR@/libraries/eosiolib -L@CMAKE_BINARY_DIR@/libraries/libc -L@CMAKE_BINARY_DIR@/libraries/libc++ -eosio-imports=@CMAKE_BINARY_DIR@/eosio.imports -eosio-pp-dir=@CMAKE_BINARY_DIR@/external/wabt <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES> -leosio -lc++ -lc ")
 
 set(CMAKE_AR "${CLANG_DIR}/bin/llvm-ar" CACHE PATH "ar" FORCE)
 set(CMAKE_RANLIB "${CLANG_DIR}/bin/llvm-ranlib" CACHE PATH "ranlib" FORCE)
