--- a/examples/exchange/CMakeLists.txt
+++ b/examples/exchange/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.5)
 project(exchange_example VERSION 1.0.0)
 
 # if no wasm root is given use default path
-if(WASM_ROOT STREQUAL "" OR NOT WASM_ROOT)
-   set(WASM_ROOT ${CMAKE_INSTALL_PREFIX})
+if(EOSIO_WASMSDK_ROOT STREQUAL "" OR NOT EOSIO_WASMSDK_ROOT)
+   set(EOSIO_WASMSDK_ROOT ${CMAKE_INSTALL_PREFIX})
 endif()
 
 # append the path to the module to include
-list(APPEND CMAKE_MODULE_PATH ${WASM_ROOT}/lib/cmake)
+list(APPEND CMAKE_MODULE_PATH ${EOSIO_WASMSDK_ROOT}/lib/cmake)
 
 #include the toolchain cmake
 include(EosioWasmToolchain)
