rename to eosio.cdt

--- a/modules/EosioWasmToolchainBuild.cmake.in
+++ b/modules/EosioWasmToolchainBuild.cmake.in
@@ -24,5 +24,5 @@ set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 
 # hack for OSX
-set(CMAKE_OSX_SYSROOT="${CLANG_DIR}/eosio.wasmsdk")
+set(CMAKE_OSX_SYSROOT="${CLANG_DIR}/eosio.cdt")
 set(CMAKE_OSX_DEPLOYMENT_TARGET="")
