Missed some things

--- a/modules/EosioWasmToolchain.cmake.in
+++ b/modules/EosioWasmToolchain.cmake.in
@@ -1,6 +1,7 @@
 message(STATUS "Setting up Eosio Wasm Toolchain")
 set(CMAKE_SYSTEM_NAME WebAssembly)
 
+set(EOSIO_CDT_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
 set(EOSIO_WASMSDK_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
 
 set(CLANG_DIR @CMAKE_INSTALL_PREFIX@/)
