--- a/scripts/generate_package.sh.in
+++ b/scripts/generate_package.sh.in
@@ -3,4 +3,14 @@
 VERSION="@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
 VARIANT=$1
 
-./generate_bottle.sh $VERSION
+mkdir tmp
+
+if [[ ${VARIANT} == "brew" ]]; then
+   bash generate_bottle.sh ${VERSION}
+elif [[ ${VARIANT} == "deb" ]]; then
+   bash generate_deb.sh ${VERSION}
+else
+   echo "Error, unknown package type. Use either ['brew', 'deb', 'rpm']."
+   exit -1
+fi
+rm -r tmp
